# python_tutorials

./: README.rst  pyproject.toml
python_tutorials.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
templates/fastapi_htmx_template/: README.md  main.py  pyproject.toml
templates/fastapi_htmx_template/fastapi_htmx_template/: db.py  models.py
templates/fastapi_htmx_template/templates/: index.html  table_users.html
templates/fastapi_template/: main.py  pyproject.toml
tests/: test_python_tutorials.py
